// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page With Title Bar should show no back button when no URL is provided 1`] = `
<pf-page-with-title-bar
  isFullHeader={[Function Boolean]}
  location={[Function SpyLocation]}
  route={[Function ActivatedRoute]}
  routeTrackingService={[Function Object]}
  router={[Function Router]}
  theme={[Function String]}
>
  <div
    class="flex-column-container default"
  >
    <div
      class="d-flex justify-content-between align-items-center page-header"
    >
      
      <div
        class="d-flex align-items-center"
      >
        
        
        <div
          class="page-title"
        >
          <h3
            class="mb-0"
          />
          <h6
            class="subtitle mb-0"
          />
        </div>
      </div>
      <div
        class="d-flex space-out-children"
      />
    </div>
    <div
      class="page-content"
    />
  </div>
</pf-page-with-title-bar>
`;

exports[`Page With Title Bar should show the back button, when provided a return Url 1`] = `
<pf-page-with-title-bar
  isFullHeader={[Function Boolean]}
  location={[Function SpyLocation]}
  returnUrl={[Function String]}
  route={[Function ActivatedRoute]}
  routeTrackingService={[Function Object]}
  router={[Function Router]}
  theme={[Function String]}
>
  <div
    class="flex-column-container default"
  >
    <div
      class="d-flex justify-content-between align-items-center page-header"
    >
      
      <div
        class="d-flex align-items-center"
      >
        
        <button
          class="btn btn-secondary back-btn"
        >
          <fa-icon
            aria-hidden="true"
            icon="long-arrow-alt-left"
          />
        </button>
        
        <div
          class="page-title"
        >
          <h3
            class="mb-0"
          />
          <h6
            class="subtitle mb-0"
          />
        </div>
      </div>
      <div
        class="d-flex space-out-children"
      />
    </div>
    <div
      class="page-content"
    />
  </div>
</pf-page-with-title-bar>
`;

exports[`Page With Title Bar should show the back button, when provided an absolute Url 1`] = `
<pf-page-with-title-bar
  absoluteUrl={[Function String]}
  isFullHeader={[Function Boolean]}
  location={[Function SpyLocation]}
  route={[Function ActivatedRoute]}
  routeTrackingService={[Function Object]}
  router={[Function Router]}
  theme={[Function String]}
>
  <div
    class="flex-column-container default"
  >
    <div
      class="d-flex justify-content-between align-items-center page-header"
    >
      
      <div
        class="d-flex align-items-center"
      >
        
        
        <a
          href="/redirectToThis/Path"
        >
          <button
            class="btn btn-secondary back-btn"
          >
            <fa-icon
              aria-hidden="true"
              icon="long-arrow-alt-left"
            />
          </button>
        </a>
        <div
          class="page-title"
        >
          <h3
            class="mb-0"
          />
          <h6
            class="subtitle mb-0"
          />
        </div>
      </div>
      <div
        class="d-flex space-out-children"
      />
    </div>
    <div
      class="page-content"
    />
  </div>
</pf-page-with-title-bar>
`;

exports[`Page With Title Bar should transclude into slots 1`] = `
<ng-component>
  <pf-page-with-title-bar>
    <div
      class="flex-column-container"
    >
      <div
        class="d-flex justify-content-between align-items-center"
      >
        
        <div
          class="d-flex space-out-children"
        >
          
          <button>
            I am a page action
          </button>
        </div>
      </div>
      <div
        class="page-content"
      >
        
        <h1>
          I am the page content
        </h1>
      </div>
    </div>
  </pf-page-with-title-bar>
</ng-component>
`;
